add gh bindings and compatibility to traefik2 docker image

--- a/deploy/traefik/docker-compose.yml
+++ b/deploy/traefik/docker-compose.yml
@@ -15,7 +15,7 @@ services:
         #- $PWD/traefik.toml:/etc/traefik/traefik.toml
 
   nbapp:
-    image: suvarchal/nbapp:latest  
+    image: nbapp:latest  
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /tmp:/tmp
@@ -25,7 +25,7 @@ services:
     environment:
       - JUPYTER_CONTAINER=suvarchal/drilsdown # use any valid jupyter notebook container
       - CULL_IDLE_TIMEOUT=120 # remove idle notebooks after N seconds
-      - RAMADDA_BASE_URL=http://weather.rsmas.miami.edu/repository 
+      - RAMADDA_BASE_URL=https://weather.rsmas.miami.edu/repository 
       - NOTEBOOK_HOST=localhost
 
     # - FLASK_APP=app.py # only for debug
@@ -52,6 +52,7 @@ services:
       - "6379"
     networks:
       - traefik_default
+      - default
     command: redis-server --appendonly yes
 
 networks:
