--- a/nbapp/Dockerfile
+++ b/nbapp/Dockerfile
@@ -5,7 +5,9 @@ COPY ./requirements.txt /requirements.txt
 
 # Install any needed packages specified in requirements.txt
 RUN pip install --trusted-host pypi.python.org -r requirements.txt
-
+RUN apt-get update && apt-get install -y --no-install-recommends git \
+    && apt-get purge -y --auto-remove \
+    && rm -rf /var/lib/apt/lists/*
 
 RUN useradd -m nbuser
 RUN groupadd docker
