whoopsy add remote container tag instead of local tag

--- a/deploy/traefik/docker-compose.yml
+++ b/deploy/traefik/docker-compose.yml
@@ -15,7 +15,7 @@ services:
         #- $PWD/traefik.toml:/etc/traefik/traefik.toml
 
   nbapp:
-    image: nbapp:latest  
+    image: suvarchal/nbapp:latest  
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /tmp:/tmp
